03.04.2025 patch 1: - Index page 	- Fixed this bug: "At ~1150 px width, the images of the “Despre CMF” and “Esti beneficiar?” sections have a weird behaviour.". 	- "Transparenta" section title text was too wide. Fixed it by inserting hyphen. 	- "Parteneri oficiali" section. Links. Reduced font size and padding for under 450px screen width. - Despre CMF page. 	- "Domeniul de activitate" section. Added link to "Programul unic". 	- "Subdiviziunile" section. Rearranged cards to match the order in the "Contacte" page. Added 1.5em left and right padding to the pill container. The outside padding for cards is still an issue. - "Informatii pentru beneficiari" page. 	- "Drepturile pacientului" section. Fixed grammar and punctuation (used ChatGPT). 	- "Responsabilitățile pacientului" section. Fixed grammar and punctuation (used ChatGPT). 	- Renamed the "info-pentru-beneficiari.css", it was "info-pentru-benficiari.css". 	- "Servicii" section. Fixed grammar and punctuation (used ChatGPT). 	- "Servicii" section. Buf fixed: "fix the space between the pill containers and the others elements at “Servicii” section" 	- "Asigurarea obligatorie de asistenţă medicală". Added link to "cnam.md". - "title-and-section.css" fixed color of text from #283B6A (actually used for background) to #2E3E5C

--- a/styles/despre-cmf.css
+++ b/styles/despre-cmf.css
@@ -96,4 +96,10 @@
 /* Add space between the pill container and the footer to match symetry*/
 .contact-container {
     padding-bottom: 2em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+}
+
+#programul-unic-link {
+    color: #2E3E5C;
 }
