--- a/styles/title-and-section-text.css
+++ b/styles/title-and-section-text.css
@@ -16,7 +16,7 @@
 
 .section-text p, .section-text ul, .section-text ol {
     text-align: justify;
-    color: #283B6A;
+    color: #2E3E5C;
     font-size: 1.5em;
     line-height: 1.25;
     margin-top: 0;
